# bboxer-yolov5

./: .gitignore  README.md  pyproject.toml
data/: aeki-coco.yaml  aeki-coco128.yaml
