[tool.poetry]
name = "bboxer-yolov5"
version = "0.1.0"
description = "AEKI Engineering YOLOv5 bounding boxer training code"
authors = ["Kacper Kedzierski <kacper.kedzierski1986@gmail.com>"]
readme = "README.md"
packages = [{include = "bboxer_yolov5"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "1.9.1"
opencv-python = "^4.6.0.66"
pandas = "^1.4.4"
setuptools = "^65.3.0"
torch = "^1.12.1"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
Pillow = "^9.2.0"
PyYAML = "^6.0"
requests = "^2.28.1"
torchvision = "^0.13.1"
tqdm = "^4.64.0"
tensorboard = "^2.10.0"
ipython = "^8.4.0"
seaborn = "^0.11.2"
psutil = "^5.9.1"
thop = "^0.1.1.post2207130030"
azure-storage-blob = "^12.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
